fix(21): revise plans based on checker feedback
- 21-01: Clarify return signature (9 elements), add OSError grep verification,
  list all 3 execution blocks explicitly, add audit log for failed operations,
  reframe audit log truth as user-observable outcome
- 21-02: Add dependency note for 21-01 constants, list all 3 call sites,
  reduce test task scope to formatter/unit tests only
- 21-03: NEW - Split integration tests into separate plan for scope sanity

--- a/.planning/phases/21-error-handling-polish/21-01-PLAN.md
+++ b/.planning/phases/21-error-handling-polish/21-01-PLAN.md
@@ -16,7 +16,7 @@ must_haves:
     - "User sees system error message (e.g., 'Permission denied') for each failed file"
     - "'q' response shows clean partial summary with files processed and remaining"
     - "Exit code 130 returned when user quits via 'q' or Ctrl+C"
-    - "Audit log creation failure aborts with exit code 2 before any file operations"
+    - "When audit log cannot be created, user sees error message and no files are modified"
   artifacts:
     - path: "filematcher/formatters.py"
       provides: "format_file_error() and format_quit_summary() methods"
@@ -107,49 +107,80 @@ EXIT_PARTIAL = 2
 EXIT_USER_QUIT = 130  # 128 + SIGINT (Unix convention)
 ```
 
-Modify interactive_execute() to:
+Modify interactive_execute() return signature from current 7-element tuple to 9-element tuple:
+```python
+) -> tuple[int, int, int, int, list[FailedOperation], int, int, int, bool]:
+    # Returns: (success_count, failure_count, skipped_count, space_saved, failed_list,
+    #           confirmed_count, user_skipped_count, remaining_count, user_quit)
+```
 
-1. Catch OSError when getting file size before execute_action:
+Update interactive_execute() to handle errors and quit in THREE duplicate execution blocks:
+
+Block 1 - confirm_all branch (lines ~139-165):
+Block 2 - 'y' response (lines ~174-202):
+Block 3 - 'a' response (lines ~214-242):
+
+Each block needs IDENTICAL changes:
+
+1. Wrap file_size fetch in try/except OSError:
 ```python
 try:
     file_size = os.path.getsize(dup) if os.path.exists(dup) else 0
 except OSError as e:
     formatter.format_file_error(dup, str(e))
+    # Still log to audit trail for failed operations
+    log_operation(audit_logger, action, dup, master, success=False, error=str(e))
     failure_count += 1
     failed_list.append(FailedOperation(dup, str(e)))
     continue
 ```
 
-2. After execute_action returns with success=False, call formatter.format_file_error(dup, error)
+2. After execute_action returns with success=False, call formatter.format_file_error(dup, error):
+```python
+success, error = execute_action(...)
+if success:
+    # existing success logic
+else:
+    formatter.format_file_error(dup, error)
+    # existing failure logic (log_operation, failure_count++, etc.)
+```
 
-3. Track remaining_count on 'q' response and pass to caller:
-   - Add user_quit: bool to return tuple (8th element)
+3. Track remaining_count on 'q' response:
    - When response == 'q':
-     - Calculate remaining = total_groups - i (groups not yet processed)
-     - Store this in a variable to return
+     - Calculate remaining = len(duplicate_groups) - i - 1 (groups not yet started)
+     - Set user_quit = True
+     - Break out of loop
 
-4. Update return signature to include remaining_count and user_quit:
-   `tuple[int, int, int, int, list[FailedOperation], int, int, int, bool]`
-   (success, failure, skipped, space_saved, failed_list, confirmed, user_skipped, remaining, user_quit)
+4. Update (KeyboardInterrupt, EOFError) handler to also:
+   - Set user_quit = True
+   - Calculate remaining_count from current loop position
 
-5. Update (KeyboardInterrupt, EOFError) handler to also set user_quit=True and calculate remaining
+5. Initialize at function start:
+   - remaining_count = 0
+   - user_quit = False
+
+6. Return all 9 elements:
+   - return (success_count, failure_count, skipped_count, space_saved, failed_list,
+             confirmed_count, user_skipped_count, remaining_count, user_quit)
 
 Update main() to handle quit:
 
-1. After interactive_execute returns, check user_quit flag
-2. If user_quit:
+1. Unpack all 9 return values from interactive_execute
+2. Check user_quit flag after interactive_execute returns
+3. If user_quit:
    - Call formatter.format_quit_summary(confirmed_count, user_skipped_count, remaining_count, space_saved, str(actual_log_path))
    - Return EXIT_USER_QUIT (130)
-3. Otherwise continue with normal summary
-
-NOTE: The existing code has duplicate execution blocks for 'y', 'a', and confirm_all cases. Each block needs the OSError handling added. Consider extracting a helper function `_execute_group_duplicates()` to avoid repetition, but keep changes minimal - just add try/except around file_size fetch and format_file_error after failed execute_action.
+4. Otherwise continue with normal summary via format_execution_summary
   </action>
   <verify>
-Run: `python3 -c "from filematcher.cli import EXIT_USER_QUIT, EXIT_PARTIAL; assert EXIT_USER_QUIT == 130; assert EXIT_PARTIAL == 2"`
-Should pass without error (constants defined correctly).
+Run these commands to verify implementation:
+1. `python3 -c "from filematcher.cli import EXIT_USER_QUIT, EXIT_PARTIAL; assert EXIT_USER_QUIT == 130; assert EXIT_PARTIAL == 2"` - constants defined
+2. `grep -n "except OSError" filematcher/cli.py | wc -l` - should show 3 (one per execution block)
+3. `grep -n "format_file_error" filematcher/cli.py | wc -l` - should show 6 (OSError + failed execute_action, times 3 blocks)
+Should pass without error.
   </verify>
   <done>
-interactive_execute catches OSError and displays inline errors. 'q' response returns remaining count. main() shows quit summary and returns exit 130. Execution continues after individual file errors.
+interactive_execute catches OSError on file size fetch in all three execution blocks and calls format_file_error. Failed operations still logged to audit trail. 'q' response returns remaining count. main() shows quit summary and returns exit 130. Return tuple now has 9 elements: (success, failure, skipped, space_saved, failed_list, confirmed, user_skipped, remaining, user_quit).
   </done>
 </task>
 
@@ -192,16 +223,19 @@ create_audit_logger() catches OSError when creating FileHandler, prints clear er
 <verification>
 1. Run test suite: `python3 run_tests.py` - all existing tests pass
 2. Import check: `python3 -c "from filematcher.formatters import ActionFormatter; from filematcher.cli import EXIT_USER_QUIT"` - no errors
-3. Manual test: Create read-only directory, attempt to run with --log pointing there, verify exit 2
+3. Verify OSError handling: `grep -c "except OSError" filematcher/cli.py` - should be 3
+4. Manual test: Create read-only directory, attempt to run with --log pointing there, verify exit 2
 </verification>
 
 <success_criteria>
 - [ ] format_file_error() method exists on ActionFormatter ABC and both implementations
 - [ ] format_quit_summary() method exists on ActionFormatter ABC and both implementations
-- [ ] interactive_execute() catches OSError on file size fetch and calls format_file_error()
-- [ ] interactive_execute() calls format_file_error() after failed execute_action()
+- [ ] interactive_execute() catches OSError on file size fetch in all 3 execution blocks
+- [ ] interactive_execute() calls format_file_error() after failed execute_action() in all 3 blocks
+- [ ] OSError failures still call log_operation() for audit trail
 - [ ] 'q' response triggers quit summary and returns EXIT_USER_QUIT (130)
 - [ ] Ctrl+C/EOFError triggers quit summary and returns EXIT_USER_QUIT (130)
+- [ ] Return tuple has 9 elements including remaining_count and user_quit
 - [ ] create_audit_logger() exits with code 2 if log file cannot be created
 - [ ] All existing tests pass
 </success_criteria>
