--- a/.planning/phases/21-error-handling-polish/21-02-PLAN.md
+++ b/.planning/phases/21-error-handling-polish/21-02-PLAN.md
@@ -126,9 +126,20 @@ format_execution_summary accepts and displays user decision counts. Text output 
   <name>Task 2: Update CLI to pass user decision counts and use EXIT_PARTIAL</name>
   <files>filematcher/cli.py</files>
   <action>
-1. Update all calls to format_execution_summary() to pass confirmed_count and user_skipped_count:
+NOTE: This task depends on Plan 21-01 which defines EXIT_SUCCESS, EXIT_PARTIAL, EXIT_USER_QUIT constants and updates interactive_execute() to return 9-element tuple with remaining_count and user_quit.
 
-For interactive mode (after interactive_execute returns):
+Update ALL THREE call sites to format_execution_summary() to pass confirmed_count and user_skipped_count:
+
+1. **Line ~648 (JSON batch mode):**
+   After batch execution completes, pass confirmed_count=len(master_results), user_skipped_count=0 since all groups are auto-confirmed.
+
+2. **Line ~694 (Text batch mode with --yes flag):**
+   After batch_execute completes, pass confirmed_count=len(master_results), user_skipped_count=0.
+
+3. **Line ~742 (Interactive mode after interactive_execute returns):**
+   Pass confirmed_count and user_skipped_count from interactive_execute return tuple.
+
+For all call sites:
 ```python
 action_formatter.format_execution_summary(
     success_count=success_count,
@@ -142,9 +153,7 @@ action_formatter.format_execution_summary(
 )
 ```
 
-For batch mode (--yes flag): Pass confirmed_count=len(master_results), user_skipped_count=0 since all groups are auto-confirmed.
-
-2. Update exit code logic in main() after interactive_execute:
+Update exit code logic in main() after interactive_execute (non-quit case):
 
 Per CONTEXT.md: "Exit code 2 on any errors in batch mode (partial success = exit 2)"
 
@@ -157,22 +166,20 @@ return EXIT_SUCCESS  # 0 - full success
 
 Note: User skipping via 'n' is NOT an error - exit 0 if user skipped but no failures.
 Exit 2 only when actual execution failures occurred.
-
-3. For JSON batch mode, also update to pass confirmed_count and user_skipped_count.
   </action>
   <verify>
 Run: `python3 -c "from filematcher.cli import main; import sys; sys.argv = ['filematcher', '--help']; main()"` - should show help without error, confirming module loads correctly.
   </verify>
   <done>
-All format_execution_summary calls include user decision counts. Exit code 2 returned when any execution failures occur. User skipping via 'n' does not cause error exit.
+All three format_execution_summary calls (JSON batch ~648, text batch ~694, interactive ~742) include user decision counts. Exit code 2 returned when any execution failures occur. User skipping via 'n' does not cause error exit.
   </done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Create comprehensive error handling tests</name>
+  <name>Task 3: Create formatter and unit tests for error handling</name>
   <files>tests/test_error_handling.py</files>
   <action>
-Create new test file with tests for Phase 21 error handling:
+Create new test file with unit tests for Phase 21 formatter methods and basic error handling:
 
 ```python
 """Tests for error handling and execution summaries (Phase 21)."""
@@ -187,55 +194,41 @@ from io import StringIO
 from filematcher.formatters import TextActionFormatter, JsonActionFormatter
 from filematcher.colors import ColorConfig, ColorMode
 from filematcher.types import Action, DuplicateGroup, FailedOperation
-from filematcher.cli import (
-    interactive_execute, EXIT_SUCCESS, EXIT_PARTIAL, EXIT_USER_QUIT
-)
-from filematcher.actions import create_audit_logger
+from filematcher.cli import EXIT_SUCCESS, EXIT_PARTIAL, EXIT_USER_QUIT
 
 from tests.test_base import BaseFileMatcherTest
 ```
 
 Test classes to create:
 
-1. TestFormatFileError:
+1. **TestFormatFileError** (2 tests):
    - test_text_format_file_error_output: Verify text output includes path and error
    - test_json_format_file_error_accumulates: Verify JSON accumulates in errors array
 
-2. TestFormatQuitSummary:
+2. **TestFormatQuitSummary** (3 tests):
    - test_text_format_quit_summary_all_fields: Verify all fields present
    - test_text_format_quit_summary_zero_space: Verify no "Freed" line when space_saved=0
    - test_json_format_quit_summary_structure: Verify JSON quit status structure
 
-3. TestInteractiveExecuteErrorHandling:
-   - test_permission_error_displays_and_continues: Mock execute_action to return permission error for first file, success for second. Verify failure_count=1, success_count=1.
-   - test_oserror_on_file_size_displays_error: Mock os.path.getsize to raise PermissionError. Verify format_file_error called.
-   - test_quit_response_returns_remaining_count: Simulate 'q' response, verify remaining_count correct.
-   - test_keyboard_interrupt_sets_user_quit: Raise KeyboardInterrupt in prompt, verify user_quit=True.
-
-4. TestExecutionSummaryEnhanced:
+3. **TestExecutionSummaryEnhanced** (3 tests):
    - test_text_summary_shows_user_decisions: Verify confirmed/skipped counts in output
    - test_text_summary_shows_dual_space_format: Verify both "1.2 MB" and bytes format
    - test_json_summary_includes_user_counts: Verify JSON has userConfirmedCount, userSkippedCount
 
-5. TestExitCodes:
-   - test_exit_success_when_no_failures: All succeed -> exit 0
-   - test_exit_partial_when_some_failures: Some fail -> exit 2
-   - test_exit_user_quit_on_q_response: User quits -> exit 130
-   - test_exit_success_when_user_skips_all: User says 'n' to everything -> exit 0 (not an error)
+4. **TestExitCodeConstants** (1 test):
+   - test_exit_code_values: Verify EXIT_SUCCESS=0, EXIT_PARTIAL=2, EXIT_USER_QUIT=130
 
-6. TestAuditLoggerFailFast:
-   - test_audit_logger_exits_on_write_error: Mock FileHandler to raise OSError, verify sys.exit(2) called
-
-Use test_base.BaseFileMatcherTest for tests needing temp directories.
-Use StringIO and patch for stdout capture.
 Use ColorMode.NEVER for predictable text output.
+Use StringIO and patch for stdout capture.
+
+Total: ~80-100 lines, 9 tests focused on formatter output.
   </action>
   <verify>
-Run: `python3 -m pytest tests/test_error_handling.py -v` or `python3 -m unittest tests.test_error_handling -v`
-All tests should pass.
+Run: `python3 -m unittest tests.test_error_handling -v`
+All 9 tests should pass.
   </verify>
   <done>
-Comprehensive test coverage for error handling: inline error display, quit summary, user decision counts, exit codes, and audit logger fail-fast. All tests pass.
+Formatter tests cover format_file_error, format_quit_summary, and enhanced format_execution_summary. Exit code constants verified. All tests pass.
   </done>
 </task>
 
@@ -253,10 +246,10 @@ Comprehensive test coverage for error handling: inline error display, quit summa
 - [ ] TextActionFormatter shows user decisions in summary (confirmed/skipped)
 - [ ] TextActionFormatter shows space in dual format (human-readable and bytes)
 - [ ] JsonActionFormatter includes userConfirmedCount and userSkippedCount
-- [ ] CLI passes user decision counts to format_execution_summary()
+- [ ] CLI passes user decision counts to format_execution_summary() at all 3 call sites
 - [ ] Exit code 2 returned when any failures occur
 - [ ] Exit code 0 returned when user skips all via 'n' (not an error)
-- [ ] tests/test_error_handling.py exists with 15+ tests
+- [ ] tests/test_error_handling.py exists with 9 formatter/unit tests
 - [ ] All tests pass including new error handling tests
 </success_criteria>
 
