chore: complete v1.5 milestone
Archived:
- milestones/v1.5-ROADMAP.md
- milestones/v1.5-REQUIREMENTS.md
- milestones/v1.5-MILESTONE-AUDIT.md

Deleted (fresh for next milestone):
- ROADMAP.md
- REQUIREMENTS.md

Updated:
- MILESTONES.md (new entry)
- PROJECT.md (requirements → Validated)
- STATE.md (reset for next milestone)
- Version bumped to 1.5.0
- CHANGELOG.md, README.md, CLAUDE.md updated
- RELEASE_NOTES_v1.5.0.md created

v1.5 Interactive Execute shipped with:
- Per-file y/n/a/q confirmation prompts
- JSON schema v2.0 with unified header object
- 308 tests passing

--- a/.planning/milestones/v1.5-REQUIREMENTS.md
+++ b/.planning/milestones/v1.5-REQUIREMENTS.md
@@ -1,4 +1,12 @@
-# Requirements: v1.5 Interactive Execute
+# Requirements Archive: v1.5 Interactive Execute
+
+**Archived:** 2026-01-31
+**Status:** ✅ SHIPPED
+
+This is the archived requirements specification for v1.5.
+For current requirements, see `.planning/REQUIREMENTS.md` (created for next milestone).
+
+---
 
 ## Milestone Goal
 
@@ -128,6 +136,12 @@ Redesign execute mode with per-file interactive confirmation that maintains cons
 | ARCH-02 | Phase 18 | Complete |
 
 ---
-*Requirements defined: 2026-01-28*
-*Based on research: SUMMARY-v1.5.md*
-*Phase assignments: 2026-01-29*
+
+## Milestone Summary
+
+**Shipped:** 16 of 16 v1.5 requirements
+**Adjusted:** None
+**Dropped:** None
+
+---
+*Archived: 2026-01-31 as part of v1.5 milestone completion*
